[package]
name = "day-02"
version = "0.1.0"
authors = ["Johan Oelrich <johan@oelrich.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.0"

structopt = "0.3"

tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["registry"] }
